--- a/style.css
+++ b/style.css
@@ -425,3 +425,53 @@ input[type="text"] {
     margin-bottom: 20px;
 }
 
+        /*services*/
+
+                                                 
+.services h1{
+    font-size: 60px;
+    text-align: center;
+    margin-bottom: 30px;
+}
+
+.services-card {
+    width: 400px;
+    height: 400px;
+    padding: 10px;
+    margin-left: 27%;
+    margin-top: 10px;
+    margin-bottom: 15px;
+    background-color: black;
+    color: white;
+    border: 1px solid #ddd;
+    text-align: center;
+    transition: box-shadow 0.3s ease; 
+}
+
+.services-title {
+    font-weight: bold;
+    display: block;
+    font-size: 30px;
+    margin-top: 45%;
+}
+
+.services-details {
+    text-align: left;
+    margin-top: 20px;
+    margin-bottom: 20px;
+    display: none;
+}
+.services-card:hover {
+    .services-title {
+        display: none;
+    }
+
+    box-shadow: 5px 5px 20px rgba(10, 10, 10, 0.5);
+    background-color: white;
+    color: black;
+}
+
+.services-card:hover .services-details {
+    display: block;
+}
+
