--- a/style.css
+++ b/style.css
@@ -515,3 +515,62 @@ ul {
     list-style-type: disc;
     margin-left: 20px;
 }
+
+
+                                                /*blog*/
+
+        .section {
+            display: flex;
+            flex-direction: row;
+            align-items: center;
+            margin-bottom: 20px;
+            border-bottom: 1px solid gray; 
+            padding-bottom: 20px; 
+        }
+
+        .last{
+            border: none;
+        }
+
+        .blogh1{
+            font-size: 30px;
+            text-align: center;
+        }
+
+        .blogh3{
+            color: black;
+            font-weight: bold;
+            margin-bottom: 3px;
+        }
+
+        .image {
+            flex: 1;
+            text-align: center;
+        }
+
+        .image img {
+            border-radius: 50%;
+            max-width: 100%; 
+            height: auto; 
+        }
+
+        .text {
+            flex: 1;
+            padding: 10px;
+        }
+
+        .button {
+           float: right;
+            padding: 10px 10px;
+            margin-top: 3px;
+            background-color: black; 
+            color: white;
+            text-decoration: none;
+            border-radius: 5px;
+            transition: background-color 0.3s ease;
+        }
+
+        .button:hover {
+            background-color: white; 
+            color: black;
+        }
