--- a/style.css
+++ b/style.css
@@ -574,3 +574,136 @@ ul {
             background-color: white; 
             color: black;
         }
+
+        
+                                            /* contact */
+
+  .opening-hours {
+    background-color:gray;
+    color: black;
+    text-align: center;
+    padding: 10px;
+    font-size: 18px;
+}
+
+.open-text {
+    font-size: 24px;
+    font-weight: bold;
+}
+
+.hours {
+    font-size: 20px;
+} 
+
+.contacth1{
+    margin: 20px;
+    font-size: 35px;
+    font-weight: bold;
+}
+
+form {
+    max-width: 400px;
+    margin: 20px auto;
+    padding: 20px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    background-color: #f9f9f9;
+}
+
+form:hover{
+    box-shadow: 0 0 10px #000; 
+}
+
+label {
+    display: block;
+    margin-bottom: 10px;
+    font-weight: bold;
+}
+
+input[type="text"],
+input[type="email"],
+input[type="tel"],
+textarea {
+    width: 100%;
+    padding: 10px;
+    margin-bottom: 10px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    transition: box-shadow 0.3s ease; 
+}
+
+input[type="text"]:focus,
+input[type="email"]:focus,
+input[type="tel"]:focus,
+textarea:focus {
+    box-shadow: 0 0 10px #000; 
+}
+
+textarea {
+    resize: vertical;
+}
+
+input[type="submit"] {
+    background-color:black;
+    color: white;
+    border: none;
+    border-radius: 5px;
+    padding: 10px 20px;
+    cursor: pointer;
+}
+
+input[type="submit"]:hover {
+    background-color: gray;
+    color: white;
+}
+
+
+.contact-section {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    margin-bottom: 20px;
+    padding: 20px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    background-color: #f9f9f9;
+}
+
+.contact-left {
+    flex: 1;
+    text-align: center;
+}
+
+.contact-left img {
+    max-width: 100%;
+    height: auto;
+}
+
+.contact-right {
+    flex: 1;
+    padding-left: 20px;
+}
+
+.contact-right h2 {
+    font-size: 20px;
+    margin-bottom: 10px;
+}
+
+.contact-right p {
+    margin-bottom: 10px;
+}
+
+.find-us-link {
+    font-size: 14px;
+    text-decoration: none;
+    background-color:black;
+    color: white;
+    border: none;
+    border-radius: 5px;
+    padding: 7px;
+    cursor: pointer;
+}
+
+.find-us-link:hover {
+    text-decoration: underline;
+}
