--- a/style.css
+++ b/style.css
@@ -306,13 +306,10 @@ input[type="text"] {
     display: inline-block;
     margin: 0 10px;
     text-decoration: none;
-    color: #fff;
+    color: white;
+    font-size: 20px; 
 }
 
-.social-icons img {
-    width: 30px;
-    height: 30px;
-}
 
 
                                             /* products page css*/
