Update Tips Banner And CSS For Font-color

--- a/style.css
+++ b/style.css
@@ -569,7 +569,7 @@ input[type="text"] {
 .tips:hover {
     background-color: #e0e0e0;
     box-shadow: 0 0 10px rgba(7, 7, 7, 0.4);
-    color: #899F38;
+    color: #0b0908;
 }
 
 h1 {
