Update Login Page And It's Styles

--- a/style.css
+++ b/style.css
@@ -814,6 +814,46 @@ strong{
         }
         
 
+        /*login page*/
+
+
+        .login-container {
+            background-color: #fff;
+            border-radius: 5px;
+            height:300px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+            /* Black box shadow */
+            padding: 20px;
+            width: 300px;
+            text-align: center;
+        }
+    
+        input[type="text"],
+        input[type="password"] {
+            width: 100%;
+            padding: 10px;
+            margin: 10px 0;
+            border: 1px solid #ccc;
+            border-radius: 3px;
+        }
+    
+        button.button {
+            display: block;
+            width: 100%;
+            float: right;
+            margin-top: 50PX;
+            align-items: center;
+            padding: 10px;
+            background-color: #899F38;
+            border: none;
+            color: white;
+            border-radius: 3px;
+            text-decoration: none;
+            cursor: pointer;
+            position: relative;
+        }
+
+
                                             /*  Responsive part */
 
 @media (max-width: 768px) {
