--- a/style.css
+++ b/style.css
@@ -855,6 +855,27 @@ strong{
         }
 
 
+        /* registration page */
+
+        .registration-container {
+            background-color: #fff;
+            border-radius: 5px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+            padding: 20px;
+            height: 500px;
+            text-align: center;
+            position: absolute;
+            top: 106px;
+        }
+
+        input {
+            width: 100%;
+            padding: 10px;
+            margin: 10px 0;
+            border: 1px solid #ccc;
+            border-radius: 3px;
+        }
+
                                             /*  Responsive part */
 
 @media (max-width: 768px) {
